--- a/.settings/org.eclipse.php.core.prefs
+++ b/.settings/org.eclipse.php.core.prefs
@@ -1,3 +1,3 @@
-#Thu Nov 19 11:06:49 EST 2009
+#Fri Dec 11 15:09:29 EST 2009
 eclipse.preferences.version=1
-include_path=0;/Galahad Framework Extension\u00055;org.eclipse.dltk.USER_LIBRARY/Zend Framework (system current)
+include_path=0;/Galahad Framework Extension
