--- a/.settings/org.eclipse.php.core.prefs
+++ b/.settings/org.eclipse.php.core.prefs
@@ -1,3 +1,3 @@
-#Fri Dec 11 15:09:29 EST 2009
+#Sat Mar 27 00:43:47 EDT 2010
 eclipse.preferences.version=1
-include_path=0;/Galahad Framework Extension
+include_path=0;/Galahad Framework Extension\u00055;org.eclipse.dltk.USER_LIBRARY/Zend Framework (Zend Server)
